--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ go:
   - 1.2
   - tip
 script:
+  - curl -s http://gocover.io/github.com/gomiro/ledger > /dev/null
   - go test -v $(go list ./... | grep -v /vendor/)
 notifications:
   slack:
