--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: go
 go:
   - 1.2
   - tip
-before_install:
-  - curl -s http://gocover.io/github.com/gomiro/ledger
+before_script:
+  - curl -s http://gocover.io/github.com/gomicro/ledger > /dev/null
 script:
   - go test -v $(go list ./... | grep -v /vendor/)
 notifications:
