--- a/glide.yaml
+++ b/glide.yaml
@@ -2,7 +2,7 @@ package: github.com/gomicro/ledger
 import: []
 testImport:
 - package: github.com/franela/goblin
-  version: 0.0.1
+  version: b962efd4bb2a58a949a16d3fdcd6ffa068d21b03
 - package: github.com/gomicro/penname
   version: v0.0.1
 - package: github.com/onsi/gomega
